# AutoSwe

./: .env.example  .gitignore  README.md  SOLVE_ONE_ISSUE.md  docker-compose.yml
server/: .dockerignore  Dockerfile  Dockerfile.sandbox  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_jira_multi_agent_fields.py
server/app/: __init__.py  config.py  main.py
server/app/agent/: __init__.py  context_manager.py  llm.py  prompt_builder.py  response_parser.py  runtime.py  trajectory.py  types.py
server/app/api/: health.py  jira_webhook.py  repositories.py  runs.py  webhook.py
server/app/db/: base.py  crud.py  models.py  schemas.py
server/app/github/: __init__.py  client.py  pr_creator.py  pr_description.py  webhook.py
server/app/indexer/: __init__.py  chunker.py  cloner.py  embedder.py  orchestrator.py  store.py  types.py  walker.py
server/app/queue/: config.py  processor.py  worker.py
server/app/realtime/: __init__.py  emitter.py
server/app/sandbox/: __init__.py  docker_sandbox.py  local.py  manager.py  types.py
server/app/tools/: __init__.py  base.py  fs_tools.py  registry.py  (+3 more)
server/tests/: test_agent_runtime_guardrails.py  test_chunker.py  test_context_manager.py  test_edit_file.py  test_embedder.py  test_github_webhook.py  test_grep_tool.py  test_health.py  test_hedged_llm.py  test_llm_fallback.py  test_llm_provider.py  test_manual_runs.py  test_pr_creator.py  test_processor.py  test_prompt_builder.py  test_response_parser.py  test_run_tests_tool.py  test_submit_tool.py  test_test_summary.py
(+49 files in other folders)
